# worldsplat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: diffusion_4d_aware.yaml  diffusion_enhanced.yaml  gs_decoder.py
scripts/: download_pretrained.sh  inference.sh  train_gs_decoder.sh  train_stage1.sh  train_stage2.sh
tools/: inference.py  train_diffusion.py  train_gs_decoder.py
worldsplat/: __init__.py
worldsplat/data/: __init__.py  dataloader.py  gs_dataset.py  nuscenes_dataset.py
worldsplat/diffusion/: __init__.py  controlnet.py  grounding_input.py  grounding_net.py  iddpm.py  ldm.py  mask_generator.py  rflow.py  stdit2.py  stdit2_blocks.py  vae.py
worldsplat/gs_decoder/: __init__.py  camera_embedding.py  gaussian_renderer.py  gs_head.py  losses.py  model.py  pixel_decoder.py  utils.py
worldsplat/utils/: __init__.py  checkpoint.py  distributed.py  lr_scheduler.py  misc.py
